# fish-shoal-simulator-old

./: .env  Cargo.toml  README.md
.github/workflows/: ci-cd.yml
src/fish-shoal-app/: Cargo.toml
src/fish-shoal-app/src/: app.rs  error.rs  main.rs
src/fish-shoal-gui/: Cargo.toml
src/fish-shoal-gui/src/: error.rs  focused_fish.rs  gui.rs  lib.rs  utils.rs
src/fish-shoal-gui/src/components/: algo_radius_and_fov.rs  entities.rs  mod.rs  sidebar.rs  simulation.rs
src/fish-shoal-renderer/: Cargo.toml
src/fish-shoal-simulator/: Cargo.toml
src/fish-shoal-simulator/src/: error.rs  lib.rs  simulator.rs  simulator_output.rs  system_bundle.rs
src/fish-shoal-simulator/src/algo/: mod.rs  schooling_mechanism.rs
src/fish-shoal-simulator/src/components/: density.rs  fish_identifier.rs  idle.rs  is_fish.rs  mod.rs  neighbor_count.rs  position.rs  social.rs  speed.rs  stress.rs  target_speed.rs  target_velocity.rs  velocity.rs
src/fish-shoal-simulator/src/entities/: fish.rs
src/fish-shoal-simulator/src/systems/: lerp_to_target.rs  load_chunks.rs  mod.rs  motion.rs  out_of_bound.rs  random_behavior.rs  swarming.rs
src/fish-shoal-simulator/src/types/: mod.rs  scalar.rs  vec2.rs
src/fish-shoal-simulator/src/uniques/: chunks.rs  config.rs  delta_time.rs  mod.rs
src/fish-shoal-updater/: Cargo.toml
src/fish-shoal-updater/src/: latest_release.rs  lib.rs  operating_system.rs  updater.rs  version.rs
