# Copyright 2025 Nicolas Spijkerman
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT or Apache-2.0"
authors = ["Nicolas Spijkerman <nicospijke@gmail.com>"]
description = "Fish shoal simulator exploring emergent collective motion from simple local rules."
rust-version = "1.90.0"

[workspace]
resolver = "3"
members = ["src/fish-shoal-simulator", "src/fish-shoal-gui", "src/fish-shoal-app", "src/fish-shoal-updater"]

[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
fish-shoal-simulator = { path = "src/fish-shoal-simulator" }
fish-shoal-gui = { path = "src/fish-shoal-gui" }
fish-shoal-updater = { path = "src/fish-shoal-updater" }
rayon = { version = "1.11.0", features = [] }
rand = { version = "0.9.2", features = [] }
shipyard = { version = "0.10.0", features = ["parallel"] }
egui = { version = "0.33.2", features = [] }
eframe = { version = "0.33.2", features = ["default_fonts", "glow", "wayland", "x11"] }
dotenv_codegen = { version = "0.15.0", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
